--- a/nxdmfmf-host-workspace/apps/nxdmfmf-main-host/src/app/header/header.css
+++ b/nxdmfmf-host-workspace/apps/nxdmfmf-main-host/src/app/header/header.css
@@ -1,3 +1,8 @@
+:host {
+  display: block;
+  flex-shrink: 0;
+}
+
 .c-header {
   display: flex;
   justify-content: space-between;
